AX: text-transform: full-size-kana must not affect AT/speech output https://bugs.webkit.org/show_bug.cgi?id=261565 rdar://115504070

Reviewed by Tyler Wilcock.

`full-size-kana` is used to improve legibility issues with small Kana text. Readers are the ones
who are supposed to make the distinction, but for ATs, we need to make sure we aren't using this
visually transformed text for speech output.

This patch adds a new IteratorBehavior, IgnoresFullSizeKana, to the text iterator for use by
Accessibility. This will return the original, untransformed text, to our string-creation
methods.

* LayoutTests/accessibility/full-size-kana-untransformed-expected.txt: Added.
* LayoutTests/accessibility/full-size-kana-untransformed.html: Added.
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::stringForRange const):
(WebCore::AccessibilityObject::stringForVisiblePositionRange):
(WebCore::AccessibilityObject::textIteratorBehaviorForTextRange const):
(WebCore::AccessibilityObject::textIteratorIgnoringFullSizeKana):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/cocoa/AccessibilityObjectCocoa.mm:
(WebCore::AccessibilityObject::contentForRange const):
* Source/WebCore/editing/TextIterator.cpp:
(WebCore::TextIterator::emitText):
* Source/WebCore/editing/TextIteratorBehavior.h:

Canonical link: https://commits.webkit.org/282258@main